--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,11 @@
                 <h2 class="font-bold text-lg">80K</h2>
                 <p class="text-zinc-500 text-xs">Followers</p>
             </div>
-            <div class="p-2 text-center">
+            <div class="p-2 text-center text-lg">
                 <h2 class="font-bold">803K</h2>
                 <p class="text-zinc-500 text-xs">Likes</p>
             </div>
-            <div class="p-2 text-center">
+            <div class="p-2 text-center text-lg">
                 <h2 class="font-bold">1.4K</h2>
                 <p class="text-zinc-500 text-xs">Photos</p>
             </div>
